Footer alignment issue fix

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ hr {
 
 .list-non-bullet {
     list-style: none;
+    padding-inline-start: 0px;
 }
 
 .list-item-inline {
